# repobrief

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.ja.md  README.md  README.zh.md  pyproject.toml
docs/: brief-format.md
examples/: README.md  build_playground.py
scripts/: smoke.sh
src/repobrief/: __init__.py  __main__.py  brief.py  churn.py  cli.py  commands.py  entrypoints.py  fswalk.py  gitinfo.py  health.py  languages.py  layout.py  manifest.py  minitoml.py  render.py  version.py
tests/: conftest.py  test_brief.py  test_churn.py  test_cli.py  test_commands.py  test_entrypoints.py  test_fswalk.py  test_gitinfo.py  test_health.py  test_languages.py  test_layout.py  test_manifest.py  test_minitoml.py  test_render.py
