[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "repobrief"
version = "0.1.0"
description = "Generate a one-page orientation brief for any repo: layout, churn-ranked hot files, entry points, commands — built for handoffs."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "JaydenCJ" }]
keywords = ["onboarding", "repository", "cli", "git", "churn", "handoff", "documentation"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Documentation",
    "Environment :: Console",
]
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[project.scripts]
repobrief = "repobrief.cli:main"

[project.urls]
Homepage = "https://github.com/JaydenCJ/repobrief"
Repository = "https://github.com/JaydenCJ/repobrief"
Issues = "https://github.com/JaydenCJ/repobrief/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
